// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot default 1`] = `
#edealer-estimator-test .c0 {
  background-color: #f3f3f3;
  border-radius: 5px;
  width: default;
  height: default;
}

<div
  className="c0"
/>
`;

exports[`snapshot h=200 1`] = `
#edealer-estimator-test .c0 {
  background-color: #f3f3f3;
  border-radius: 5px;
  width: default;
  height: 200px;
}

<div
  className="c0"
/>
`;

exports[`snapshot h=200 w=300 1`] = `
#edealer-estimator-test .c0 {
  background-color: #f3f3f3;
  border-radius: 5px;
  width: default;
  height: 200px;
}

<div
  className="c0"
/>
`;

exports[`snapshot light 1`] = `
#edealer-estimator-test .c0 {
  background-color: #f8f8f8;
  border-radius: 5px;
  width: default;
  height: default;
}

<div
  className="c0"
/>
`;

exports[`snapshot rounded 1`] = `
#edealer-estimator-test .c0 {
  background-color: #f3f3f3;
  border-radius: 9999px;
  width: default;
  height: default;
}

<div
  className="c0"
/>
`;
